senpai/tests/cases/error/extern_fn_struct_return.sen
extern fn foo() -> Point

fn main():
    foo()
